@@ -13,6 +13,7 @@ our $VERSION = '1.001000';
 
 use Moose qw( has around extends );
 use Dist::Zilla::Plugin::Prereqs::MatchInstalled 1.000000;
+use Dist::Zilla::Util::ConfigDumper qw( config_dumper );
 use MooseX::Types::Moose qw( ArrayRef HashRef Str Bool );
 
 =begin MetaPOD::JSON v1.1.0
@@ -154,16 +155,7 @@ around mvp_multivalue_args => sub {
   return ( 'exclude', $orig->( $self, @args ) );
 };
 
-around dump_config => sub {
-  my ( $orig, $self, ) = @_;
-  my $config      = $self->$orig();
-  my $this_config = {
-    exclude      => $self->exclude,
-    upgrade_perl => $self->upgrade_perl,
-  };
-  $config->{ q{} . __PACKAGE__ } = $this_config;
-  return $config;
-};
+around dump_config => config_dumper( __PACKAGE__, qw( exclude upgrade_perl ) );
 
 =p_method C<_build__exclude_hash>
 
