@@ -5,7 +5,11 @@ Release history for Dist-Zilla-Plugin-Prereqs-MatchInstalled-All
  - Dependencies changed since 1.000000, see misc/*.deps* for details
  - configure: ↓1
  - develop: +8 ↑2 -3 (suggests: +2 -1)
+ - runtime: +1
  - test: +1 -3 (recommends: ↑2 -1)
+
+ [Internals]
+ - Implement dump_config with config_dumper
 
  [Metadata]
  - Show 1x Contributor
